[package]
name = "rurust-spam-bot"
version = "0.1.0"
authors = ["Bano Notit <bano.notit@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.9"
telegram-typings = "3.5.2"
base64 = "0.10"
crc16 = "*"
reqwest = { version = "0.9", features = ["default-tls-vendored"] }
rayon = "*"
